[package]
name = "butter_client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.21"
futures-util = "0.3.21"
simd-json = "0.6.0"
tokio = { version = "1.20.0", features = ["full"]}
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"]}
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
structopt = { version = "0.3", default-features = false }
url = "2.2.2"
tracing-futures = "0.2.5"
serde_json = "1.0.82"
serde = {version ="1.0.140" , features = ["derive"]}
anyhow = "1.0.58"
serde_yaml = "0.8.26"
reqwest = {version = "0.11.11", features = ["json"]}
